--- a/style.css
+++ b/style.css
@@ -563,11 +563,13 @@ section{
     background-color: #1e1c2a;
     margin: 15px 5%;
     display: none;
+    z-index: 1000;
+    top: 50px;
 }
 .add-cart{
      width: 100%;
-     max-height: 515px;
-     min-height: 515px;
+     max-height: 500px;
+     min-height: 500px;
      padding: 20px 2%;
      overflow-y: auto;
 }
@@ -613,8 +615,8 @@ section{
 
 .order{
     width: 100%;
-    height: 30px;
-    padding: 15px;
+    height: 45px;
+    padding: 10px;
     margin-top: 8px;
     display: flex;
     flex-direction: row;
